syntax = "proto3";

option csharp_namespace = "Makc2021.Layer6.Apps.GrpcAPI.Protos.Pages.DummyMain.List";

package DummyMainListPage;

// The greeting service definition.
service DummyMainListPageProto {
  // Sends a greeting
  rpc SayHello (ListRequest) returns (ListReply);
}

// The request message containing the user's name.
message ListRequest {
  string name = 1;
}

// The response message containing the greetings.
message ListReply {
  string message = 1;
}
